# AI-Email-Assistant-OpenEnv-dashboard

./: .gitignore  Dockerfile  README.md  app.py  dashboard.py  demo.py  env.py  inference.py  mock_system.py  models.py  openenv.yaml  openenv_backup.yaml  playground.py  pyproject.toml  requirements.txt  server.py  tasks.py  verify.py
server/: app.py  dashboard.py  demo.py  env.py  mock_system.py  models.py  playground.py  requirements.txt  server.py  tasks.py  verify.py
tests/: test_env.py
