[project]
name = "ai-email-assistant"
version = "1.0.0"
description = "A high-fidelity email management environment for AI agents."
authors = [{ name = "Rxhulnxyak" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "pytest",
    "gradio",
    "pandas",
    "python-multipart",
    "pyyaml",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
